--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,8 @@ title: "Essien's Excellence Academy"
 description: "Official Website of Essien's Excellence Academy"
 theme: minima
 
-author:
-  name: "Essien's Excellence Academy"
-  email: "unwilling.sturgeon.xlnj@letterprotect.net"
+author: "Freeman"
+ 
   # Navigation links
 header_pages:
   - about.md
