--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Essien's Excellence Academy"
 description: "Official Website of Essien's Excellence Academy"
-theme: null
+theme: minima
 
 author: "Freeman"
  
