--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,8 @@ title: "Essien's Excellence Academy"
 description: "Official Website of Essien's Excellence Academy"
 theme: minima
 
+permalink: pretty
+
 # Add custom stylesheet
 sass:
   style: compressed
